# windowed-silero-vad

./: .gitignore  README.md  analyze_wav.ipynb  app-silero-vad.sh  app.sh  asr.py  asr_server.py  pyproject.toml  speaker_verification.py  test_client.py  test_realtime_client.py  vad_websocket_server.py
eres2net/: ERes2Net.py  ERes2NetV2.py  ERes2Net_huge.py
