[project]
name = "windowed-silero-vad"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "funasr>=1.2.6",
    "ipykernel>=6.30.1",
    "jupyterplot==0.0.3",
    "loguru>=0.7.3",
    "matplotlib>=3.6.0",
    "numpy>=1.24.0",
    "pip>=25.2",
    "scipy>=1.15.3",
    "silero-vad>=5.1.2",
    "torch>=1.12.0",
    "torchaudio>=0.12.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
]
